--- a/src/app/(client)/(site)/account/setting/ai/page.module.scss
+++ b/src/app/(client)/(site)/account/setting/ai/page.module.scss
@@ -1,5 +1,5 @@
 .page {
-  padding: 2rem 1rem 3rem;
+  padding: 0;
 }
 
 .heading {
@@ -100,10 +100,6 @@
 }
 
 @media (width <= 640px) {
-  .page {
-    padding: 1.5rem 0 2.5rem;
-  }
-
   .heading {
     display: block;
   }
